--- a/templates/csi/rbac-for-us.yaml
+++ b/templates/csi/rbac-for-us.yaml
@@ -1,1 +1,36 @@
 {{- include "helm_lib_csi_controller_rbac" . }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  labels:
+    provisioner: csi.huawei.com
+  name: csi-node
+rules:
+  - apiGroups: [ "" ]
+    resources: [ "secrets","configmaps" ]
+    verbs: [ "get","update","create" ]
+  - apiGroups: [ "xuanwu.huawei.io" ]
+    resources: [ "storagebackendclaims","storagebackendcontents" ]
+    verbs: [ "get" ]
+  - apiGroups: [ "xuanwu.huawei.io" ]
+    resources: [ "resourcetopologies" ]
+    verbs: [ "create", "get", "update", "delete" ]
+  - apiGroups: [ "" ]
+    resources: [ "pods" ]
+    verbs: [ "list","get" ]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  labels:
+    provisioner: csi.huawei.com
+  name: csi-node
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: csi-node
+subjects:
+  - kind: ServiceAccount
+    name: csi-node
+    namespace: {{ .Values.kubernetes.namespace }}
