--- a/templates/csi/controller.yaml
+++ b/templates/csi/controller.yaml
@@ -72,6 +72,7 @@
 ###
 
 {{- define "csi_node_args" }}
+- "--nodename=$(NODE_ID)"
 - "--endpoint=$(CSI_ENDPOINT)"
 - "--dr-endpoint=$(DRCSI_ENDPOINT)"
 - "--driver-name=csi.huawei.com"
@@ -91,6 +92,10 @@
     fieldRef:
       apiVersion: v1
       fieldPath: metadata.namespace
+- name: NODE_ID
+  valueFrom:
+    fieldRef:
+      fieldPath: spec.nodeName
 {{- end }}
 
 {{- $csiNodeConfig := dict }}
