--- a/templates/csi/rbac-for-us.yaml
+++ b/templates/csi/rbac-for-us.yaml
@@ -3,13 +3,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: csi-node
+  name: d8:{{ .Chart.Name }}:csi:node
   namespace: d8-{{ .Chart.Name }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: csi-node
+  name: d8:{{ .Chart.Name }}:csi:node
 rules:
   - apiGroups: [ "" ]
     resources: [ "secrets","configmaps" ]
@@ -33,7 +33,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: csi-node
+  name: d8:{{ .Chart.Name }}:csi:node
 subjects:
   - kind: ServiceAccount
     name: csi-node
