--- a/images/csi-huawei/werf.inc.yaml
+++ b/images/csi-huawei/werf.inc.yaml
@@ -8,6 +8,9 @@ image: {{ $.ImageName }}-golang-artifact
 from: {{ $.BASE_GOLANG_22_ALPINE }}
 fromCacheVersion: "2024-06-11.1"
 
+git:
+  - add: /main.go
+    to: /main.go
 mount:
   - fromPath: ~/go-pkg-cache
     to: /go/pkg
@@ -18,6 +21,7 @@ shell:
     - export GO_VERSION={{ env "GOLANG_VERSION" }}
     - export GOPROXY={{ env "GOPROXY" }}
     - git clone --depth 1 --branch {{ env "SOURCE_REPO_TAG" }} {{ env "SOURCE_REPO" }}/Huawei/eSDK_K8S_Plugin.git /esdb_k8s_plugin
+    - mv /main.go /esdb_k8s_plugin/csi
     - cd /esdb_k8s_plugin
     - GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -ldflags="-s -w" -o /huaweicsi ./csi
     - GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -ldflags="-s -w" -o /storage-backend-controller ./cmd/storage-backend-controller
