--- a/images/csi-huawei/werf.inc.yaml
+++ b/images/csi-huawei/werf.inc.yaml
@@ -42,7 +42,7 @@ from: {{ $.BASE_ALT_DEV }}
 shell:
   setup:
     - cd /
-    - git clone {{ env "SOURCE_REPO" }}/util-linux/util-linux.git .
+    - git clone {{ env "SOURCE_REPO" }}/util-linux/util-linux.git /util-linux
     - git checkout v${UTIL_LINUX_VERSION} && \
     - cd /util-linux
     - ./autogen.sh
