--- a/images/csi-huawei/werf.inc.yaml
+++ b/images/csi-huawei/werf.inc.yaml
@@ -41,10 +41,9 @@ from: {{ $.BASE_ALT_DEV }}
 
 shell:
   setup:
-    - cd /
     - git clone {{ env "SOURCE_REPO" }}/util-linux/util-linux.git /util-linux
     - cd /util-linux
-    - git checkout v${UTIL_LINUX_VERSION}
+    - git checkout ${UTIL_LINUX_VERSION}
     - ./autogen.sh
     - ./configure LDFLAGS="-static" --enable-static-programs -disable-all-programs --enable-nsenter
     - make install-strip
