--- a/images/csi-huawei/werf.inc.yaml
+++ b/images/csi-huawei/werf.inc.yaml
@@ -13,7 +13,7 @@ git:
   - add: /images/csi-huawei/main.go
     to: /main.go
   - add: /images/csi-huawei/host_helper.go
-    to: /main.go
+    to: /host_helper.go
 mount:
   - fromPath: ~/go-pkg-cache
     to: /go/pkg
