--- a/templates/csi/controller.yaml
+++ b/templates/csi/controller.yaml
@@ -141,7 +141,7 @@
 {{- $_ := set $csiNodeConfig "serviceAccount" "csi-node" }}
 {{- $_ := set $csiNodeConfig "additionalNodeArgs" (include "csi_node_args" . | fromYamlArray) }}
 {{- $_ := set $csiNodeConfig "additionalNodeEnvs" (include "csi_node_envs" . | fromYamlArray) }}
-{{- $_ := set $csiControllerConfig "$additionalNodeVolumes" (include "csi_additional_node_volume" . | fromYamlArray) }}
-{{- $_ := set $csiControllerConfig "additionalNodeVolumeMounts" (include "csi_additional_node_volume_mounts" . | fromYamlArray) }}
+{{- $_ := set $csiNodeConfig "$additionalNodeVolumes" (include "csi_additional_node_volume" . | fromYamlArray) }}
+{{- $_ := set $csiNodeConfig "additionalNodeVolumeMounts" (include "csi_additional_node_volume_mounts" . | fromYamlArray) }}
 
 {{- include "helm_lib_csi_node_manifests" (list . $csiNodeConfig) }}
