--- a/images/csi-huawei/werf.inc.yaml
+++ b/images/csi-huawei/werf.inc.yaml
@@ -37,7 +37,7 @@ shell:
     - chmod +x /oceanctl
 
 ---
-{{ $csiBinaries := "/bin/mount /bin/umount /usr/bin/nsenter /usr/bin/xargs /usr/bin/hostname" }}
+{{ $csiBinaries := "/bin/mount /bin/umount /usr/bin/nsenter /bin/xargs /usr/bin/hostname" }}
 ---
 image: {{ $.ImageName }}-binaries-artifact
 from: {{ $.BASE_ALT_DEV }}
