--- a/images/csi-huawei/werf.inc.yaml
+++ b/images/csi-huawei/werf.inc.yaml
@@ -37,7 +37,7 @@ shell:
     - chmod +x /oceanctl
 
 ---
-{{ $csiBinaries := "/bin/mount /bin/umount /usr/bin/nsenter /bin/xargs /usr/bin/hostname" }}
+{{ $csiBinaries := "/bin/mount /bin/umount /usr/bin/nsenter /bin/xargs /usr/bin/hostname /usr/bin/echo" }}
 ---
 image: {{ $.ImageName }}-binaries-artifact
 from: {{ $.BASE_ALT_DEV }}
@@ -51,8 +51,6 @@ shell:
     - ./configure LDFLAGS="-static" --enable-static-programs -disable-all-programs --enable-nsenter
     - make install-strip
   install:
-    - cat /binary_replace.sh
-    - ls -lah /usr/bin/xargs
     - /binary_replace.sh -i "{{ $csiBinaries }}" -o /relocate
 
 ---
