--- a/images/csi-huawei/werf.inc.yaml
+++ b/images/csi-huawei/werf.inc.yaml
@@ -14,6 +14,8 @@ git:
     to: /main.go
   - add: /images/csi-huawei/host_helper.go
     to: /host_helper.go
+  - add: /images/csi-huawei/utils.go
+    to: /utils.go
 mount:
   - fromPath: ~/go-pkg-cache
     to: /go/pkg
@@ -26,6 +28,7 @@ shell:
     - git clone --depth 1 --branch {{ env "SOURCE_REPO_TAG" }} {{ env "SOURCE_REPO" }}/Huawei/eSDK_K8S_Plugin.git /esdb_k8s_plugin
     - mv /main.go /esdb_k8s_plugin/csi
     - mv /host_helper.go /esdb_k8s_plugin/connector/host
+    - mv /utils.go /utils
     - cd /esdb_k8s_plugin
     - GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -ldflags="-s -w" -o /huaweicsi ./csi
     - GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -ldflags="-s -w" -o /storage-backend-controller ./cmd/storage-backend-controller
