--- a/templates/csi/controller.yaml
+++ b/templates/csi/controller.yaml
@@ -72,31 +72,38 @@
 ###
 
 {{- define "csi_node_args" }}
-- "--nodename=$(NODE_ID)"
-- "--endpoint=$(CSI_ENDPOINT)"
+- "--endpoint=/csi/csi.sock"
 - "--dr-endpoint=$(DRCSI_ENDPOINT)"
 - "--driver-name=csi.huawei.com"
 - "--connector-threads=4"
 - "--volume-use-multipath=true"
 - "--all-path-online=false"
 - "--kubelet-volume-devices-dir-name=/volumeDevices/"
+- "--scsi-multipath-type=DM-multipath"
+- "--nvme-multipath-type=HW-UltraPath-NVMe"
+- "--scan-volume-timeout=3"
+- "--exec-command-timeout=30"
+- "--logging-module=file"
+- "--log-level=info"
+- "--log-file-dir=/var/log/huawei"
+- "--log-file-size=20M"
+- "--max-backups=9"
 {{- end }}
 
 {{- define "csi_node_envs" }}
-- name: CSI_ENDPOINT
-  value: /csi/csi.sock
-- name: DRCSI_ENDPOINT
-  value: /csi/dr-csi.sock
 - name: CSI_NAMESPACE
   valueFrom:
     fieldRef:
       apiVersion: v1
       fieldPath: metadata.namespace
-- name: NODE_ID
+- name: CSI_NODENAME
   valueFrom:
     fieldRef:
+      apiVersion: v1
       fieldPath: spec.nodeName
+
 {{- end }}
+
 
 {{- define "csi_additional_node_volume" }}
 - hostPath:
