--- a/templates/csi/controller.yaml
+++ b/templates/csi/controller.yaml
@@ -101,11 +101,18 @@
     fieldRef:
       apiVersion: v1
       fieldPath: spec.nodeName
-
 {{- end }}
 
 
 {{- define "csi_additional_node_volume" }}
+- hostPath:
+    path: /var/lib/kubelet/plugins/csi.huawei.com
+    type: DirectoryOrCreate
+  name: socket-dir
+- hostPath:
+    path: /var/lib/kubelet/plugins_registry
+    type: Directory
+  name: registration-dir
 - hostPath:
     path: /var/lib/iscsi
     type: ""
