--- a/templates/csi/controller.yaml
+++ b/templates/csi/controller.yaml
@@ -55,6 +55,7 @@
 {{- define "csi_additional_containers" }}
 {{- $csiControllerImage := index . 0 }}
 - args:
+    - --endpoint=/csi/csi.sock
     - --logging-module=file
     - --log-level=info
     - --log-file-dir=/var/log/huawei
@@ -101,6 +102,7 @@
     - mountPath: /etc/localtime
       name: host-time
 - args:
+    - --endpoint=/csi/csi.sock
     - --logging-module=file
     - --log-level=info
     - --log-file-dir=/var/log/huawei
