--- a/templates/csi/rbac-for-us.yaml
+++ b/templates/csi/rbac-for-us.yaml
@@ -49,3 +49,46 @@ subjects:
   - kind: ServiceAccount
     name: csi-node
     namespace: d8-{{ .Chart.Name }}
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: d8:{{ .Chart.Name }}:csi:controller:sidecar
+  {{- include "helm_lib_module_labels" (list . (dict "app" "csi-controller")) | nindent 2 }}
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+    verbs:
+      - get
+  - apiGroups:
+      - xuanwu.huawei.io
+    resources:
+      - resourcetopologies
+    verbs:
+      - create
+      - get
+      - update
+      - delete
+  - apiGroups:
+      - xuanwu.huawei.io
+    resources:
+      - storagebackendclaims
+      - storagebackendcontents
+    verbs:
+      - get
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: d8:{{ .Chart.Name }}:csi:controller:sidecar
+  {{- include "helm_lib_module_labels" (list . (dict "app" "csi-controller")) | nindent 2 }}
+subjects:
+  - kind: ServiceAccount
+    name: csi
+    namespace: d8-{{ .Chart.Name }}
+roleRef:
+  kind: ClusterRole
+  name: d8:{{ .Chart.Name }}:csi:controller:sidecar
+  apiGroup: rbac.authorization.k8s.io
