--- a/templates/csi/rbac-for-us.yaml
+++ b/templates/csi/rbac-for-us.yaml
@@ -53,22 +53,33 @@ subjects:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: d8:{{ .Chart.Name }}:csi:controller:sidecar
+  name: d8:{{ .Chart.Name }}:csi:controller:controller-sidecar
   {{- include "helm_lib_module_labels" (list . (dict "app" "csi-controller")) | nindent 2 }}
 rules:
   - apiGroups:
-      - ""
+      - admissionregistration.k8s.io
     resources:
-      - secrets
+      - validatingwebhookconfigurations
     verbs:
       - create
       - get
-      - list
       - update
+      - delete
   - apiGroups:
-      - xuanwu.huawei.io
+      - ""
     resources:
-      - resourcetopologies
+      - configmaps
+      - secrets
+      - events
+    verbs:
+      - create
+      - get
+      - update
+      - delete
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
     verbs:
       - create
       - get
@@ -78,9 +89,16 @@ rules:
       - xuanwu.huawei.io
     resources:
       - storagebackendclaims
+      - storagebackendclaims/status
       - storagebackendcontents
+      - storagebackendcontents/status
     verbs:
+      - create
       - get
+      - list
+      - watch
+      - update
+      - delete
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
