--- a/templates/controller/deployment.yaml
+++ b/templates/controller/deployment.yaml
@@ -78,15 +78,15 @@ spec:
             privileged: false
           env:
             - name: LOG_LEVEL
-{{- if eq .Values.csiCeph.logLevel "ERROR" }}
+{{- if eq .Values.csiHuawei.logLevel "ERROR" }}
               value: "0"
-{{- else if eq .Values.csiCeph.logLevel "WARN" }}
+{{- else if eq .Values.csiHuawei.logLevel "WARN" }}
               value: "1"
-{{- else if eq .Values.csiCeph.logLevel "INFO" }}
+{{- else if eq .Values.csiHuawei.logLevel "INFO" }}
               value: "2"
-{{- else if eq .Values.csiCeph.logLevel "DEBUG" }}
+{{- else if eq .Values.csiHuawei.logLevel "DEBUG" }}
               value: "3"
-{{- else if eq .Values.csiCeph.logLevel "TRACE" }}
+{{- else if eq .Values.csiHuawei.logLevel "TRACE" }}
               value: "4"
 {{- end }}
             - name: CONTROLLER_NAMESPACE
