--- a/templates/controller/rbac-for-us.yaml
+++ b/templates/controller/rbac-for-us.yaml
@@ -19,6 +19,7 @@ rules:
     resources:
       - secrets
       - configmaps
+      - storagebackendclaims
     verbs:
       - get
       - list
@@ -55,29 +56,25 @@ rules:
   - apiGroups:
       - storage.deckhouse.io
     resources:
-      - cephstorageclasses
-      - cephstorageclasses/status
-      - cephclusterconnections
-      - cephclusterconnections/status
-      - cephclusterauthentications
-      - cephclusterauthentications/status
+      - huaweistorageconnections
+      - huaweistorageconnections/status
     verbs:
       - get
       - list
       - create
       - watch
       - update
-  - apiGroups:
-      - storage.k8s.io
-    resources:
-      - storageclasses
-    verbs:
-      - create
-      - delete
-      - list
-      - get
-      - watch
-      - update
+  # - apiGroups:
+  #     - storage.k8s.io
+  #   resources:
+  #     - storageclasses
+  #   verbs:
+  #     - create
+  #     - delete
+  #     - list
+  #     - get
+  #     - watch
+  #     - update
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
