--- a/templates/controller/rbac-for-us.yaml
+++ b/templates/controller/rbac-for-us.yaml
@@ -19,7 +19,6 @@ rules:
     resources:
       - secrets
       - configmaps
-      - storagebackendclaims
     verbs:
       - get
       - list
@@ -45,7 +44,17 @@ rules:
       - delete
       - update
       - create
-
+  - apiGroups:
+      - xuanwu.huawei.io
+    resources:
+      - storagebackendclaims
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - delete
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
