--- a/templates/controller/rbac-for-us.yaml
+++ b/templates/controller/rbac-for-us.yaml
@@ -44,7 +44,17 @@ rules:
       - delete
       - update
       - create
-
+  - apiGroups:
+      - xuanwu.huawei.io
+    resources:
+      - storagebackendclaims
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - delete
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -55,29 +65,25 @@ rules:
   - apiGroups:
       - storage.deckhouse.io
     resources:
-      - cephstorageclasses
-      - cephstorageclasses/status
-      - cephclusterconnections
-      - cephclusterconnections/status
-      - cephclusterauthentications
-      - cephclusterauthentications/status
+      - huaweistorageconnections
+      - huaweistorageconnections/status
     verbs:
       - get
       - list
       - create
       - watch
       - update
-  - apiGroups:
-      - storage.k8s.io
-    resources:
-      - storageclasses
-    verbs:
-      - create
-      - delete
-      - list
-      - get
-      - watch
-      - update
+  # - apiGroups:
+  #     - storage.k8s.io
+  #   resources:
+  #     - storageclasses
+  #   verbs:
+  #     - create
+  #     - delete
+  #     - list
+  #     - get
+  #     - watch
+  #     - update
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
