--- a/templates/csi/controller.yaml
+++ b/templates/csi/controller.yaml
@@ -45,6 +45,8 @@
 {{- end }}
 
 {{- define "csi_additional_controller_volume_mounts" }}
+- mountPath: /var/log
+  name: log-dir
 {{- end }}
 
 {{- $csiControllerImage := include "helm_lib_module_image" (list . "csiHuawei") }}
