--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -39,7 +39,7 @@ on:
 
 jobs:
   deploy-dev:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, regular, selectel]
     name: Deploy dev
     steps:
       - name: PRINT VARS
